[package]
name = "phoenix_ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["ws"]}
axum-extra = { version = "0.3", features = ["spa"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde_json = "1.0"
nanoid = "0.4"
tracing = "0.1"

[dev-dependencies]